kube/guestbook-controller.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: guestbook
  labels:
    app: guestbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook
  template:
    metadata:
      labels:
        app: guestbook
    spec:
      containers:
      - name: guestbook
        image: docker.io/waveywaves/guestbook-go:v1
        ports:
        - name: http-server
          containerPort: 3000
