kube/redis-replica-controller.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: redis-replica
  labels:
    app: redis
    role: replica
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      role: replica
  template:
    metadata:
      labels:
        app: redis
        role: replica
    spec:
      containers:
      - name: redis-replica
        image: registry.k8s.io/redis-slave:v2
        args:
          - "--replicaof"
          - "redis-master"
          - "6379"
        ports:
        - name: redis-server
          containerPort: 6379
